syntax = "proto3";

message RecursiveMessage {
    int32 field = 1;
    RecursiveMessage recursive = 2;
}

message RecursiveMessageNested {
    message Nested {
        repeated RecursiveMessageNested foo = 1;
    }

    int32 field = 1;
    Nested corecursive = 2;
}
